--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
+    "@metabase/embedding-sdk-react": "0.0.1-20240328-4e3c1e2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
