Simplify initial setup

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @metabase:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=$NPM_TOKEN
