--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "api",
+  "name": "customer-zero-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.ts",
   "license": "MIT",
+  "scripts": {
+    "dev": "esno src/main.ts"
+  },
   "dependencies": {
     "argon2": "^0.40.1",
     "cors": "^2.8.5",
@@ -14,6 +17,7 @@
   "devDependencies": {
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "esno": "^4.7.0"
   }
 }
