--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^7.8.0",
+    "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
     "@metabase/embedding-sdk-react": "0.0.3-20240412-8d17bb4",
     "@testing-library/jest-dom": "^5.17.0",
