--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1"
