--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 REACT_APP_METABASE_INSTANCE_URL=https://customer-zero.hosted.staging.metabase.com
-REACT_APP_JWT_PROVIDER_URI=/sso/metabase
 REACT_APP_AUTH_API_HOST=http://localhost:3003
-REACT_APP_API_KEY=mb_your_api_key_here
+
+REACT_APP_JWT_PROVIDER_URI=/sso/metabase
+
+# This is only needed if you are using the API key for authentication.
+# REACT_APP_API_KEY=mb_your_api_key_here
