--- a/api/.env.example
+++ b/api/.env.example
@@ -3,3 +3,4 @@ FRONTEND_URL=http://localhost:3004
 METABASE_SITE_URL=https://customer-zero.hosted.staging.metabase.com 
 METABASE_JWT_SHARED_SECRET=your_secret_here
 SESSION_SECRET=your_secret_here
+DB_URL=your_postgres_url_here
