--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
     "@metabase/embedding-sdk-react": "file:../../metabase/resources/embedding-sdk",
+    "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
