--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "postgres": "^3.4.4",
     "typescript": "^5.4.5"
   },
