--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5",
     "node-fetch": "^3.3.2",
+    "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "typescript": "^5.4.5"
   },
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "drizzle-kit": "^0.20.17",
-    "esno": "^4.7.0"
+    "esno": "^4.7.0",
+    "fast-csv": "^5.0.1"
   }
 }
