--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webpack-cli": "^5.1.4"
   },
   "jest": {
     "roots": [
