--- a/package.json
+++ b/package.json
@@ -102,9 +102,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@mmarchini/observe": "^2.0.0",
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   },
   "jest": {
