--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "build": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts build",
     "test": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../../metabase/resources/embedding-sdk"
   },
   "eslintConfig": {
     "extends": [
