--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,4 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+}
