also build the api as part of the build script

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start": "rimraf ./node_modules/.cache && NODE_OPTIONS=--max_old_space_size=8192 PORT=3004 BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn api:build",
+    "api:build": "cd api && yarn build",
     "test": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier . --write",
