--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/dist/main.js"
+    }
+  ]
 }
