--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
   "version": 2,
-  "rewrites": [
+  "buildCommand": "NODE_OPTIONS=\"--max-old-space-size=6144\" react-scripts build && cd api && tsc",
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/dist/main.js"
+      "src": "api/dist/main.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["api/dist/**"] }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/dist/main.js"
     }
   ]
 }
