--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 REACT_APP_METABASE_INSTANCE_URL=https://customer-zero.hosted.staging.metabase.com
-REACT_APP_API_HOST=http://localhost:3003
+REACT_APP_API_HOST=http://localhost:3003/api
 REACT_APP_JWT_PROVIDER_URI=/sso/metabase
