--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier . --write",
-    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../../metabase/resources/embedding-sdk"
+    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk"
   },
   "eslintConfig": {
     "extends": [
