add logout and change application name

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 PORT=3003
 FRONTEND_URL=http://localhost:3004
-METABASE_INSTANCE_URL=https://customer-zero.hosted.staging.metabase.com 
+METABASE_INSTANCE_URL=https://shoppy.hosted.staging.metabase.com 
 METABASE_JWT_SHARED_SECRET=your_secret_here
 SESSION_SECRET=your_secret_here
 DB_URL=your_postgres_url_here
