--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embedding-sdk-customer-zero",
+  "name": "embedding-sdk-shoppy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
