migrate to vite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "outDir": "build",
     "jsx": "react-jsx",
     "target": "esnext",
+    "types": ["vite/client"],
     "allowSyntheticDefaultImports": true,
-    "module": "commonjs",
+    "module": "ES2020",
     "isolatedModules": true,
     "strict": true,
     "moduleResolution": "node",
