--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "^0.1.8",
+    "@metabase/embedding-sdk-react": "file:../metabase/resources/embedding-sdk",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +15,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -22,18 +23,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
-    "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^5.4.5",
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.4",
     "wouter": "^3.1.2"
   },
   "scripts": {
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "start": "rimraf ./node_modules/.cache && NODE_OPTIONS=--max_old_space_size=8192 PORT=3004 BROWSER=none react-scripts start",
+    "start": "rimraf ./node_modules/.cache && NODE_OPTIONS=--max_old_space_size=8192 BROWSER=none vite",
     "start:https": "HTTPS=true yarn start",
-    "build": "react-scripts build",
+    "build": "vite build",
+    "preview": "vite preview",
     "api:build": "cd api && yarn build",
     "test": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts test",
     "eject": "react-scripts eject",
