--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "0.1.9",
+    "@metabase/embedding-sdk-react": "file:../metabase/resources/embedding-sdk",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
