--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "file:../metabase/resources/embedding-sdk",
+    "@metabase/embedding-sdk-react": "^0.1.12",
     "@tabler/icons-react": "^3.6.0",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
