--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-error-boundary": "^4.0.12",
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
-    "source-map-explorer": "^2.5.3",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4",
     "wouter": "^3.1.2"
@@ -41,8 +40,7 @@
     "test": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier . --write",
-    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk"
   },
   "eslintConfig": {
     "extends": [
