--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.40.1",
     "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.9",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
