--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
   "scripts": {
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "dev": "rimraf ./node_modules/.cache && NODE_OPTIONS=--max_old_space_size=8192 BROWSER=none vite",
+    "dev": "NODE_OPTIONS=--max_old_space_size=8192 BROWSER=none vite",
     "dev:https": "HTTPS=true yarn dev",
     "build": "vite build",
     "preview": "vite preview",
     "api:build": "cd api && yarn build",
     "build:vercel": "NODE_OPTIONS=--max_old_space_size=5000 vite build",
     "format": "prettier . --write",
-    "dev:link": "rm -rf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk"
+    "dev:link": "rimraf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk && rimraf ./node_modules/.vite"
   },
   "eslintConfig": {
     "extends": [
