--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dev": "NODE_OPTIONS=--max_old_space_size=8192 BROWSER=none vite",
     "dev:https": "HTTPS=true yarn dev",
     "dev:link": "rimraf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk && yarn purge-cache",
-    "purge-cache": "rimraf node_modules/.vite/deps*/@metabase_embedding-sdk-react*",
+    "purge-cache": "rimraf node_modules/.vite",
     "build": "vite build",
     "preview": "vite preview",
     "api:build": "cd api && yarn build",
