--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "dev": "NODE_OPTIONS=--max_old_space_size=8192 BROWSER=none vite",
+    "dev": "vite",
     "dev:https": "HTTPS=true yarn dev",
     "dev:link": "rimraf node_modules/@metabase && yarn add file:../metabase/resources/embedding-sdk && yarn purge-cache",
     "purge-cache": "rimraf node_modules/.vite",
