--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "^0.1.13",
+    "@metabase/embedding-sdk-react": "file:../../metabase/resources/embedding-sdk",
     "@tabler/icons-react": "^3.6.0",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -33,6 +33,7 @@
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start": "rimraf ./node_modules/.cache && NODE_OPTIONS=--max_old_space_size=8192 PORT=3004 BROWSER=none react-scripts start",
+    "install-and-start": "yarn install-deps && yarn start:https",
     "start:https": "HTTPS=true yarn start",
     "build": "react-scripts build",
     "api:build": "cd api && yarn build",
