--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/src/main"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
