--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "^0.1.22",
+    "@metabase/embedding-sdk-react": "file:../metabase/resources/embedding-sdk",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "jotai": "^2.8.4",
