--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@mantine/core": "^7.8.0",
-    "@mantine/form": "^7.8.0",
-    "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "^0.1.22",
+    "@mantine/core": "^6",
+    "@mantine/form": "^6",
+    "@mantine/hooks": "^6",
+    "@metabase/embedding-sdk-react": "file:../metabase/resources/embedding-sdk",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "jotai": "^2.8.4",
@@ -23,8 +23,8 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
     "postcss-nesting": "^12.1.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17",
+    "react-dom": "^17",
     "react-error-boundary": "^4.0.12",
     "sort-by": "^1.2.0",
     "typescript": "^5.4.5",
