simplify user switching

--- a/api/package.json
+++ b/api/package.json
@@ -13,13 +13,11 @@
     "drizzle:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "argon2": "^0.40.1",
-    "connect-pg-simple": "^9.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.9",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2",
     "pg": "^8.11.5",
@@ -27,9 +25,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/node-fetch": "^2",
