--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/node-fetch": "^2",
+    "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.20.17",
     "esno": "^4.7.0"
   }
