--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "jotai": "^2.8.4",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
