--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.4",
-    "typescript-eslint": "^7.15.0"
+    "typescript-eslint": "^7.15.0",
+    "vite-plugin-webfont-dl": "^3.9.5"
   }
 }
