--- a/package.json
+++ b/package.json
@@ -82,8 +82,11 @@
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
     "rimraf": "^5.0.5",
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript-eslint": "^7.15.0",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-webfont-dl": "^3.9.5"
   }
 }
