--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
+    "react-intersection-observer": "^9.13.1",
     "sort-by": "^1.2.0",
     "typescript": "^5.4.5",
     "vite": "^5.3.1",
