Read from .env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+PORT=4173
 VITE_APP_METABASE_INSTANCE_URL=https://shoppy.hosted.staging.metabase.com
 VITE_APP_API_HOST=https://embedded-analytics-sdk-demo.metabase.com/api
 VITE_APP_AUTH_PROVIDER_URI=/sso/metabase
