--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
-    "@metabase/embedding-sdk-react": "^0.53.9",
+    "@metabase/embedding-sdk-react": "^0.53.11",
     "@tanstack/react-query": "^5.32.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -35,6 +35,8 @@
     "wouter": "^3.1.2"
   },
   "scripts": {
+    "docker:up": "docker compose --env-file .env.docker up",
+    "docker:down": "docker compose --env-file .env.docker down --rmi all --volumes",
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "dev": "vite",
