Use api keys for importing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       MB_SETUP_TOKEN: "${PREMIUM_EMBEDDING_TOKEN}"
       METABASE_ADMIN_EMAIL: "${METABASE_ADMIN_EMAIL}"
       METABASE_ADMIN_PASSWORD: "${METABASE_ADMIN_PASSWORD}"
+      METABASE_ADMIN_API_KEY: "${METABASE_ADMIN_API_KEY}"
       SHOPPY_DB_PORT: "${SHOPPY_DB_PORT}"
       SHOPPY_DB: "${SHOPPY_DB}"
       SHOPPY_DB_USER: "${SHOPPY_DB_USER}"
