--- a/.env.docker.example
+++ b/.env.docker.example
@@ -10,5 +10,5 @@ METABASE_ADMIN_PASSWORD="foobarbaz"
 
 SHOPPY_DB_PORT="5432"
 SHOPPY_DB="shoppy"
-SHOPPY_DB_USER="postgres"
+SHOPPY_DB_USER="shoppy"
 SHOPPY_DB_PASSWORD="foobarbaz"
