--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_USER: "${SHOPPY_DB_USER}"
       POSTGRES_PASSWORD: "${SHOPPY_DB_PASSWORD}"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U shoppy" ]
       interval: 10s
       timeout: 5s
       retries: 5
