--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
       - "release"
 
 env:
-  version: ${{ github.event.inputs.version || vars.K8S_AUDIENCE }}
+  version: ${{ github.event.inputs.version || secrets.K8S_AUDIENCE }}
 
 jobs:
   deploy:
@@ -34,7 +34,7 @@ jobs:
         id: create-oidc-token
         shell: bash
         run: |
-          export OIDC_URL_WITH_AUDIENCE="$ACTIONS_ID_TOKEN_REQUEST_URL&audience=${{ vars.K8S_AUDIENCE }}"
+          export OIDC_URL_WITH_AUDIENCE="$ACTIONS_ID_TOKEN_REQUEST_URL&audience=${{ secrets.K8S_AUDIENCE }}"
           IDTOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" -H "Accept: application/json; api-version=2.0" "$OIDC_URL_WITH_AUDIENCE" | jq -r .value)
           echo "::add-mask::${IDTOKEN}"
           echo "idToken=${IDTOKEN}" >>$GITHUB_OUTPUT
@@ -50,7 +50,7 @@ jobs:
             - name: default
               cluster:
                 certificate-authority-data: ${{ secrets.K8S_CERTIFICATE_AUTHORITY_DATA }}
-                server: ${{ vars.K8S_SERVER }}
+                server: ${{ secrets.K8S_SERVER }}
             users:
             - name: oidc-token
               user:
@@ -59,12 +59,12 @@ jobs:
             - name: default
               context:
                 cluster: default
-                namespace: ${{vars.K8S_NAMESPACE}}
+                namespace: ${{secrets.K8S_NAMESPACE}}
                 user: oidc-token
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ vars.IAM_ROLE }}
+          role-to-assume: ${{ secrets.IAM_ROLE }}
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: us-east-1
       - name: Setup psql client
@@ -76,7 +76,7 @@ jobs:
           kubectl patch metabase metabase --type=merge -p '{"spec":{"pause":{"enabled":true}}}'
       - name: Download PostgreSQL dump from S3
         run: |
-          aws s3 cp s3://${{ vars.S3_BUCKET }}/${{ vars.S3_KEY }} dump.sql
+          aws s3 cp s3://${{ secrets.S3_BUCKET }}/${{ vars.S3_KEY }} dump.sql
       - name: Drop existing Metabase database
         run: |
           PGPASSWORD=${{ secrets.DB_SU_PASSWORD }} psql -h ${{ secrets.DB_HOST }} \
