--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   dump:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
