--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -31,8 +31,9 @@ jobs:
           sudo apt-get install -y postgresql-client        
       - name: Export PostgreSQL dump to S3
         run: |
-          PGPASSWORD=${{ secrets.DB_PASSWORD }} pg_dump -h ${{ secrets.DB_HOST }} \
-            -U ${{ secrets.DB_USER }} \
-            -d ${{ secrets.DB_DATABASE }} \
-            --file=dump.sql
+          export PGPASSWORD=${{ secrets.DB_PASSWORD }}
+          export PGUSER=${{ secrets.DB_USER }}
+          export PGDATABASE=${{ secrets.DB_DATABASE }}
+          export PGHOST=${{ secrets.DB_HOST }}
+          pg_dump --file=dump.sql
           aws s3 cp dump.sql s3://${{ secrets.S3_BUCKET }}/${{ vars.S3_KEY }}
