--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get install -y postgresql-client        
       - name: Export PostgreSQL dump to S3
         run: |
-          export PGPASSWORD=${{ secrets.DB_PASSWORD }}
+          export PGPASSWORD='${{ secrets.DB_PASSWORD }}'
           export PGUSER=${{ secrets.DB_USER }}
           export PGDATABASE=${{ secrets.DB_DATABASE }}
           export PGHOST=${{ secrets.DB_HOST }}
