Add DWH DB reinitialization step

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -8,6 +8,7 @@ METABASE_JWT_SHARED_SECRET="ffffffffffffffffffffffffffffffffffffffffffffffffffff
 METABASE_ADMIN_EMAIL: "admin@example.com"
 METABASE_ADMIN_PASSWORD="foobarbaz"
 
+SHOPPY_DB_HOST="shoppy_db"
 SHOPPY_DB_PORT="5432"
 SHOPPY_DB="shoppy"
 SHOPPY_DB_USER="shoppy"
