--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,12 @@ services:
       context: .
       dockerfile: api/Dockerfile
       args:
-        DB_URL: "postgres://${SHOPPY_DB_USER}:${SHOPPY_DB_PASSWORD}@shoppy_db:${SHOPPY_DB_PORT}/${SHOPPY_DB}"
+        DB_URL: "postgres://${SHOPPY_DB_USER}:${SHOPPY_DB_PASSWORD}@${SHOPPY_DB_HOST}:${SHOPPY_DB_PORT}/${SHOPPY_DB}"
     environment:
       PORT: "${API_PORT}"
       CLIENT_PORT: "${CLIENT_PORT}"
       IS_LOCAL_DB: "true"
-      DB_URL: "postgres://${SHOPPY_DB_USER}:${SHOPPY_DB_PASSWORD}@shoppy_db:${SHOPPY_DB_PORT}/${SHOPPY_DB}"
+      DB_URL: "postgres://${SHOPPY_DB_USER}:${SHOPPY_DB_PASSWORD}@${SHOPPY_DB_HOST}:${SHOPPY_DB_PORT}/${SHOPPY_DB}"
       METABASE_INSTANCE_URL: "http://metabase:${MB_PORT}"
       METABASE_JWT_SHARED_SECRET: "${METABASE_JWT_SHARED_SECRET}"
       METABASE_ADMIN_EMAIL: "${METABASE_ADMIN_EMAIL}"
